<resources>
    <string name="app_name">Discount Travel</string>
    <string name="error_string">Ошибка</string>
    <string name="ok_string">Оk</string>
    <string name="exit_string">Выход</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Настройки</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_splash">Заставка</string>
    <string name="dummy_menu_item">Пункт меню</string>
    <string name="tour_photo">Фото тура</string>
    <string name="call_to_office">Позвонить</string>
    <string name="email_to_office">Написать</string>
    <string name="share">Поделиться</string>
    <string name="countries">Страны</string>
    <string name="europa">ТУРЫ ПО ЕВРОПЕ</string>
    <string name="austria">АВСТРИЯ</string>
    <string name="albania">АЛБАНИЯ</string>
    <string name="bolgary">БОЛГАРИЯ</string>
    <string name="hungary">ВЕНГРИЯ</string>
    <string name="vietnam">ВЬЕТНАМ</string>
    <string name="germany">ГЕРМАНИЯ</string>
    <string name="holland">ГОЛЛАНДИЯ</string>
    <string name="greece">ГРЕЦИЯ</string>
    <string name="georgia">ГРУЗИЯ</string>
    <string name="dominikana">ДОМИНИКАНА</string>
    <string name="egypt">ЕГИПЕТ</string>
    <string name="israel">ИЗРАИЛЬ</string>
    <string name="indonesia">ИНДОНЕЗИЯ</string>
    <string name="italy">ИТАЛИЯ</string>
    <string name="spain">ИСПАНИЯ</string>
    <string name="india">ИНДИЯ</string>
    <string name="china">КИТАЙ</string>
    <string name="cyprus">КИПР</string>
    <string name="cuba">КУБА</string>
    <string name="mexica">МЕКСИКА</string>
    <string name="malta">МАЛЬТА</string>
    <string name="mavrikiy">МАВРИКИЙ</string>
    <string name="maldives">МАЛЬДИВЫ</string>
    <string name="marocco">МАРОККО</string>
    <string name="emirates">ОАЭ</string>
    <string name="poland">ПОЛЬША</string>
    <string name="portugal">ПОРТУГАЛИЯ</string>
    <string name="usa">США</string>
    <string name="seishel">СЕЙШЕЛЫ</string>
    <string name="slovakia">СЛОВАКИЯ</string>
    <string name="stpetersburg">САНКТ-ПЕТЕРБУРГ</string>
    <string name="turkey">ТУРЦИЯ</string>
    <string name="thailand">ТАИЛАНД</string>
    <string name="tunisia">ТУНИС</string>
    <string name="ukraine">УКРАИНА</string>
    <string name="finland">ФИНЛЯНДИЯ</string>
    <string name="france">ФРАНЦИЯ</string>
    <string name="choatia">ХОРВАТИЯ</string>
    <string name="montenegro">ЧЕРНОГОРИЯ</string>
    <string name="chech">ЧЕХИЯ</string>
    <string name="srilanka">ШРИ-ЛАНКА</string>
    <string name="malaisia">МАЛАЙЗИЯ</string>
    <string name="jamaica">ЯМАЙКА</string>
    <string name="all_tours">ВСЕ ТУРЫ</string>
    <string name="drawer_menu_title">Меню</string>
    <string name="tour_upload_error">Не удалось загрузить новые туры, продолжить без обновления?</string>
    <string name="zero_version_error">При первом запуске приложение обновляет всю базу туров, необходимо устойчивое интернет соединение</string>
    <string name="order_form">Отправить заявку</string>
    <string name="order_from_app_sending">Отправка</string>
    <string name="order_from_app_sending_letter">Шлем письмо</string>
    <string name="order_letter_subject">Заявка с Android приложения Discount Travel</string>
    <string name="developer_email">it@top-1.com.ua</string>
    <string name="add_system_account">Для отправки необходимо добавить аккаунт в систему</string>
    <string name="root_name">ROOT_NAME</string>
    <string name="child_name">CHILD_NAME</string>
    <string name="your_name">Ваше имя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="your_name_error">Имя не может быть пустым</string>
    <string name="phone_number_error">Неправильный формат номера</string>
    <string name="city_phone_number">tel:+380445002125</string>
    <string name="kyivstar_phone_number">tel:+380685476060</string>
    <string name="mts_phone_number">tel:+380660225627</string>
    <string name="life_phone_number">tel:+380631590027</string>
    <string name="phone_number_chooser">Операторы</string>
    <string name="city_number">Городской</string>
    <string name="kyivstar_number">Kyivstar</string>
    <string name="mts_number">MTC</string>
    <string name="life_number">Life</string>
    <string name="order_comment">Комментарии</string>
    <string name="site_url">http://www.discount-travel.com.ua/</string>
    <string name="order_sent">Ваша заявка отправлена</string>
    <string name="no_phone_app">Не установлено ни одного приложения для телефонных звонков</string>
    <string name="hit_back_again">Для выхода нажмите кнопку \"Назад\" еще раз</string>
    <string name="order_not_sent">Заявка не отправлена, проверьте интернет соединение</string>
    <string name="get_account">Для отправки необходим доступ к Вашему e-mail и Интернету</string>


</resources>
